src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-79.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix_unterminated, \"\\nfoo\")"
---
- token: break
  stream: "\n"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 1
      column: 0
- severity: error
  message: "documents must be separated by a marker line ('...' or '---')"
  span:
    start:
      index: 1
      line: 1
      column: 0
    end:
      index: 1
      line: 1
      column: 0
  stream: ""
- value:
    explicit: false
    version: ~
    tags: {}
- remainder: foo
  span:
    start:
      index: 1
      line: 1
      column: 0
    end:
      index: 4
      line: 1
      column: 3

