src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-8.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\\u{feff}# comment\")"
---
- token: byte_order_mark
  stream: ﻿
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: comment
  stream: "# comment"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 12
      line: 0
      column: 12
- value:
    version: ~
    tags: {}

