src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-81.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix_unterminated, \"\\n\\tfoo\")"
---
- token: break
  stream: "\n"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 1
      column: 0
- token: separator
  stream: "\t"
  span:
    start:
      index: 1
      line: 1
      column: 0
    end:
      index: 2
      line: 1
      column: 1
- severity: error
  message: "documents must be separated by a marker line ('...' or '---')"
  span:
    start:
      index: 2
      line: 1
      column: 1
    end:
      index: 2
      line: 1
      column: 1
  stream: ""
- value:
    explicit: false
    version: ~
    tags: {}
- remainder: foo
  span:
    start:
      index: 2
      line: 1
      column: 1
    end:
      index: 5
      line: 1
      column: 4

