src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"\")"
---
- value:
    explicit: false
    version: ~
    tags: {}

