src/grammar/document/snapshots/yaml_parser__grammar__document__tests__reserved_directive-4.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%FOO a b c\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: FOO
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- severity: warning
  message: "unknown directive 'FOO'"
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
  stream: FOO
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: directive_parameter
  stream: a
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: separator
  stream: " "
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 7
      line: 0
      column: 7
- token: directive_parameter
  stream: b
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 8
      line: 0
      column: 8
- token: separator
  stream: " "
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 9
      line: 0
      column: 9
- token: directive_parameter
  stream: c
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 10
      line: 0
      column: 10
- value:
    version: ~
    tags: {}

